syntax = "proto3";

package ru.tikskit.protobuf.generated;

option java_multiple_files = true;

message ValueMessage {
  int32 value = 1;
}

message RangeMessage {
  int32 min = 1;
  int32 max = 2;
}

message Empty {}

service RemoteValuesProvider {
  rpc sendMeValues(RangeMessage) returns (stream ValueMessage);
}
